[gd_scene load_steps=19 format=4 uid="uid://oqpsd56sxbch"]

[ext_resource type="Script" uid="uid://bbpn22lvaguf4" path="res://Elements/grimblo.gd" id="1_frpx3"]
[ext_resource type="Animation" uid="uid://c0hunubavdg4p" path="res://Elements/Walking.res" id="2_frpx3"]
[ext_resource type="Material" uid="uid://boqpwrsmdfvay" path="res://Materials/Grimblo.tres" id="2_hv2v0"]
[ext_resource type="PackedScene" uid="uid://pwefcngg5hft" path="res://art/Pointer.glb" id="4_k2h1b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dwyiq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4yfmw"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_feixj"]
_surfaces = [{
"aabb": AABB(-0.553043, -1, -1, 1.10609, 2, 2),
"format": 34896613377,
"index_count": 324,
"index_data": PackedByteArray("AAABAAIAAQAaAAIAAAACABoAAAAEAAEAAQAEABsAAAAbAAQAAQAbAAsAHAALABsAHAABAAsAHAAbAAoADgAcAAoAGwAdAAoADgAKAB0AAAAdABsAHgAcAA4AHgABABwAHgAOAB0AHgAdAB8AHQAgAB8ADwAeAB8ADwAfACAAHQAGACAAAAAGAB0AIQAPACAAIQAeAA8AIQAgABEAIAAGABEABwAhABEABwARAAYAIgAhAAcAIgAeACEAIgAHAAYAHgADAAEAIwAeACIAAwAeACMAIgAGACQAEgAiACQAJQAiABIAIwAiACUAEgAkACYAJQASACYABgAmACQAJQAmABMADAAlABMAIwAlAAwAJgAnABMADAATACcABgAnACYAIwAMACcABgAUACcAIwAnACgAFQAjACgAJwANACgAFQAoAA0AJwAUAA0AKQAjABUAKQAVAA0AKQANACoADQAUACoAKgArACkAKgAUACsALAAjACkALAApACsAFAAsACsAAwAjACwAFAAtACwALQAWACwAFAAuAC0ALQAuABYALwAsABYALgAvABYAAwAsAC8ALgAXAC8AFwAwAC8AAwAvADAALgAxABcAFwAxADAAFAAxAC4AMQADADAAFAAyADEABgAyABQAMgAGAAAAMQAFAAMABQAYAAMAMQAzAAUABQAzABgAMQAyADMANAADABgAMwA0ABgAMwAZADQAMwAyABkAGQA1ADQAGQAyADUANgADADQANgA0ADUAMgA2ADUAAQADADYAMgAQADYAAQA2ABoAEAAIADYAGgA2AAgAEAA3AAgAMgA3ABAANwAaAAgAMgAAADcAAAAaAAkANwAJABoANwAAAAkA"),
"lods": [0.0184107, PackedByteArray("AAABAAIAAQAIAAIAAAACAAgAAAAEAAEAAQAEAAoAAAAKAAQAAQAKAAsADgABAAsADgALAAoAAQADAAgADgADAAEAAAAIAAkADwAOAAoAEAAAAAkAEAAJAAgAAAAGAAoAEAAGAAAADwAKABEACgAGABEABwAPABEABwAOAA8ABwARAAYADAAOAAcAAwAOAAwAEgAHAAYADAAHABIAEgAGABMADAASABMABgAUABMABgAQABQAFQAMABMAFQATAA0AEwAUAA0AFQANABQAFgAMABUAFAAWABUAAwAMABYAFAAXABYAFwADABYAFAAFABcAFwAFAAMAFAAQAAUABQAYAAMACAADABgABQAQABkAGQAQAAgABQAZABgAGQAIABgA"), 0.103774, PackedByteArray("AAABAAIAAQAIAAIAAAACAAgAAAAIAAkAAAAEAAEAAAAKAAQAAQAEAAoAAAAGAAoACQAGAAAAAQAKAAsABQAJAAgABgAJAAUAAQADAAgABQAIAAMABwABAAsABwALAAoABwADAAEABwAKAAYAAwAHAAwABQADAAwADAAHAAYABgAFAA0ADAANAAUADAAGAA0A"), 0.228339, PackedByteArray("AAABAAIAAQADAAIAAAAEAAEABQACAAMABQAAAAIAAAAGAAQABgAAAAUABwABAAQABwAEAAYABwADAAEABwAGAAUABQADAAcA")],
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 56,
"vertex_data": PackedByteArray("AAAAAAAAAAD//wAA//8AAP//AAAAAAAA//815coaAAAAAAAA//8AAAAANeXKGgAAAAA15TXlAAD//zXlNeUAAP//eLDIAAAAAACIpAAAAAAAAHiwNv8AAP//iKT//wAA///h/DS8AAAAAP//iKQAAP//NLzh/AAA//9D0r7zAAAAADS8HQMAAAAANtwY7QAA//++80PSAAAAAAj5iMcAAAAANv+GTwAA/////4ikAAD//wj5djgAAAAAvvO7LQAA//823OYSAAAAAEPSQAwAAP//iKQAAAAAAACIpP//AAD//3iwNv8AAAAANLzh/AAA//+Ixwj5AAAAAIjHCPkAAAAAQ9K+8wAA//823BjtAAD//xjtNtwAAP//Nv94sAAAAAAY7TbcAAD//wj5iMcAAAAAvvND0gAAAADh/DS8AAAAADb/eLAAAP////92WwAAAAD//3ZbAAD//zb/hk8AAP//4fzKQwAAAADh/MpDAAAAAAj5djgAAP//vvO7LQAA//8Y7cgjAAAAABjtyCMAAAAAiMf2BgAAAAA23OYSAAD//0PSQAwAAP//iMf2BgAA//80vB0DAAAAAHiwyAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_y2wu8"]
resource_name = "Character_Cube"
_surfaces = [{
"aabb": AABB(-0.553043, -1, -1, 1.10609, 2, 2),
"attribute_data": PackedByteArray("/x//f/9f/z//X/9//x//P6WZWUb/3/8//9//f6WZpXl6mYTG/1//f/9f/7//X/8//18AAP+fAAD/X/8/pZmlef9f/3+lmVlG/1//v0yZTPn/X///epmExkKf8lD/391WHYzQfyGJ/78djAAAIYn/Px2M0H9Cn/JQIYn/Px2MzP8hif+//58h6f+f3Vb/3x1O/98dbFie4XEXnW5L/9+QdA2XAACQlOdCDI+8QA2XhHuQlObCDI+8wA2XhHsMj7xAWJ7hcf+f3VaQlOdCF51uSw2XRfsMj7zAzZ/g00Ge4fGQlObC75xuy//f4VPPn+FTz5/hU//f8lD/3+FTQp/yUP/fHU7/3/JQWJ4dTlieHU7/325LF51uS//f8Uj/325LhJvxSISb8Uj/3/FIpZlZRg2XAAANl3pEDZd6RJCUAACQlOdC4ZEAAJCUAADhkaZB4ZGmQQyPAADhkQAADI+8QB2MAAAMjwAAHYwvQB2ML0AhiQAAIYn/P//fIWnPnx1s/58haf/fHWxCnwxvz58dbP/fDG//3wxvWJ7hcUKfDG//3+Fx/9/hcRedkHT/35B0hJsNdxedkHT/3w13/98Nd6WZpXmEmw13DZeEew2XesQNl3rEkJQXfZCU5sLhkVl+kJQXfeGRpcHhkaXBDI9Cf+GRWX4Mj7zAHYzQfwyPQn8djC7AHYwuwCGJ/38hif+/IYn/fyGJ/38Mj0J/kJQXfeGRWX4djC9A4ZGmQRedkHSEmw13DZd6REKfDG/Pn+FThJvxSP+fIWnPnx1sWJ4dTv+fIWn/391W/98haf+f3VYhiQAAIYn//wyPN/+QlO784ZFB/h2MLsDhkaXB75yQ9EWbDPcNl3rEN58M70Wb8cjNnx3s/5/c1kGeHM43n/HQ"),
"format": 34896613399,
"index_count": 324,
"index_data": PackedByteArray("AAABAAIAAAADAAEAIgA6ABcAIgA7ADoAPAA9AD4APAA/AD0AFgBAAEEAFgBCAEAAQwBEACMAQwBFAEQAJgBGAEcAJgBIAEYASQAFAEoASQBLAAUABABMAA0ABABNAEwATgBPACgATgBQAE8AKQBRAFIAKQBTAFEAVABVAFYAVABXAFUAKgBYAFkAKgBaAFgAWwBcABoAWwBdAFwAXgBfAGAAXgBhAF8AJABiAGMAJABkAGIAZQBmAGcAZQBoAGYAaQBqACUAaQBrAGoAJwBsAG0AJwBuAGwAbwBwAHEAbwAGAHAACAByAAcACABzAHIAdAB1ACsAdAB2AHUALAB3AHgALAB5AHcAegB7AHwAegB9AHsALQB+AH8ALQCAAH4AgQCCABgAgQCDAIIACgCEABkACgAJAIQADgCFABAAhQCGABwADgCGAIUAhgCHAIgAhgAPAIcADgAPAIYAhwAPAC4AiQAOAB4AigAOAIkAigCJAC8AigAPAA4ADwCLAIwAjQCKADIADwCOAIsAiwCOADAADwCKAI8ADwCPAI4AkACKAI0AkACNABEAjwCKAJAAjgCPAJEAjgCRAJIAkQCPADEAjwCQAJMAkwCQADMAjwCTAB0AlACVAJYAlACXAJUACwCYABsACwAMAJgAEgCZABQAmQCaAB8AEgCaAJkAmgCbAJwAmgATAJsAEgATAJoAmwATADQAnQASACAAngASAJ0AngCdADUAngATABIAEwCfAKAAoQCeADgAEwCiAJ8AnwCiADcAEwCeADYAEwA2AKIAowCeAKEAowChABUANgCeAKMAogA2ACEAogAhAKQAIQA2AKUANgCjAKYApgCjADkANgCmAKcA"),
"lods": [0.0184107, PackedByteArray("AAABAAIAAAADAAEAIgAjABcAIgAXACQAIgAWACMAJAAlACIAFgAmACMAJgAFACMAJgAEAAUAJAAnACUAJwAHACUAJwAGAAcABAAoAA0ABAApACgAKQAaACgAKQAqABoAKgAbABoACwAaABsACwAMABoACAArAAcACAAsACsALAAYACsALAAtABgALQAZABgACgAYABkACgAJABgADgAcABAADgAPABwAHAAPAC4ALwAPAA4ALwAOAB4ADwAvAB0ADwAdADAAMAAdADEAHQAvABEAEQAvADIAHQARADMAEgAfABQAEgATAB8AHwATADQANQATABIANQASACAAEwA1ADYAEwA2ADcANwA2ACEANgA1ABUAFQA1ADgANgAVADkA"), 0.103774, PackedByteArray("AAABAAIAAAADAAEAFgAFABcAFgAXAAYABgAHABYAFgAEAAUACAAYAAcACAAZABgACgAYABkACgAJABgABAAaAA0ABAAbABoACwAaABsACwAMABoADgAcABAADgAPABwAEQAPAA4ADwARAB0AEQAOAB4AEgAfABQAEgATAB8AIAATABIAEwAgABUAEwAVACEA"), 0.228339, PackedByteArray("AAABAAIAAAADAAEABAAFAAYABgAHAAQACAAJAAcACAAKAAkABAALAAwABAAMAA0ADgAPABAAEQAPAA4AEgATABQAEwASABUA")],
"material": SubResource("StandardMaterial3D_4yfmw"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 168,
"vertex_data": PackedByteArray("AAAAAAAA/7///wAA////v///AAAAAP+/AAAAAP///7///zXlNeXbzwAANeU15Zf/AAA15coa/f7//zXlyhqa7gAANeXKGqzo//8AAAAA//8AAAAAAAD/////AAD///+/AAAAAP///78AADXlNeUQxf//AAD//1zV//815coatdT//wAAAABU1f//NeU15ZfMAAAAAAAAT9UAADXlNeVV1QAAAAD//1TVAAA15coaIdL//+H8NLz//wAA//+IpP////94sMgAJP4AAIikAAD//wAAeLA2/wrA//+IpP///7///3iwyABU1f//4fw0vFXV//+IpP//VNUAAHiwNv9U1QAAiKQAAFTVAAD//4ikVNX/////iKT//wAACPmIx///AAA2/4ZP/////wj5djj/////vvND0v//AAC+87st//8AADbcGO1vw///Q9K+80fK//80vOH8RcT//zbc5hJo8QAAQ9JADKDxAAA0vB0DF/r//zbc5hJU1f//NLzh/FTV//8I+XY4VNX/////iKRU1f//Q9K+81TV//++80PSVNUAADbcGO1U1QAANLwdA1TVAAA2/4ZPdNUAAAj5iMdU1QAAQ9JADFTVAAC+87stVNUAADb/eLD/////Nv94sP////82/3iw//8AAOH8NLz//wAANv94sP/////h/DS8//8AAAj5iMf//wAA4fw0vP////8I+YjH/////wj5iMf//wAAvvND0v////++80PS//8AABjtNtz//wAAvvND0v////8Y7Tbc/////xjtNtzW+AAAGO023P////815TXlb/gAADbcGO2pxf//NtwY7XjQ//823BjtJ80AAEPSvvP5w///Q9K+87PNAACIxwj5jsIAAEPSvvMZwv//iMcI+b7K//+Ixwj5SscAADS84fxtwQAAiMcI+RPB//80vOH8pMcAAHiwNv+bwAAANLzh/GPA//94sDb/fsT//3iwNv9cwQAAiKT//x3A//+IpP//b8EAAP//dlv/////Nv+GT////////3Zb//8AADb/hk//////4fzKQ/////82/4ZP//8AAOH8ykP//wAA4fzKQ/////8I+XY4/////+H8ykP//wAACPl2OP//AAAI+XY4/////77zuy3//wAAvvO7Lf////8Y7cgj/////77zuy3//wAAGO3II///AAAY7cgjCv///zXlyhrx////GO3II/////823OYSPu4AADbc5hJn6AAANtzmEkPt//9D0kAMKPEAAEPSQAwQ7f//iMf2Bib0//9D0kAMT/QAAIjH9gZ+8QAAiMf2Buz1//80vB0DSPf//4jH9gZe9wAANLwdA9n1//94sMgAmfr//zS8HQOh+gAAeLDIABD6AAB4sMgAFf7//4ikAAAj/gAAiKQAABT+//+IpAAA/////4ikAABt1f//NLwdA6rV//9D0kAMVNX//4jH9gZU1f//eLA2/1TV//+Ixwj5L9X//77zuy0R0P//GO3II4zD//823BjtaNL//+H8ykPc0///Nv94sDTV//8Y7TbcS9X/////dltU1f//Nv+GT1PV//8I+YjHVNX/////dlv//wAA//+IpP//AAD//3Zb////////iKT//wAAiKT///+/AACIpP//VNUAADS84fxU1QAAQ9K+81TVAACIxwj5VNUAAHiwyABU1QAAiMf2BjrVAAC+80PSVNUAABjtNtxU1QAANtzmEonSAADh/DS8VNUAABjtyCNs1QAANv94sFTVAAD//3ZbVNUAAAj5djhU1QAA4fzKQ1TVAAD/fwAA/38AAP9/AAD/f+PijRUm2DcAlYJN1kCtHbwlvx2v/7//v/+//7///////////4LkfBuhKq8qbCtJKqoqqiodN3EkTdVX1VXVVNVU1VTVQ9Fc1/9/brX/f+a94L0FwP+//78Q/O4D/////6oqqiqpKqoqqiqqKlTVVNVU1VTVVNVU1f9/5r3/fxOx/39Mxv9/687/f5Ws/39p09TnKhgB6/oQYvWjCcmvib2Pvz+05b9auqsqqiqqKqoqqiqqKqoqqiqqKqoqqiqqKlTVVNVU1VTVe9VB1VTVVNVU1VTVVNVU1f9/5r3/f+a9/3+xuf9/sbn/f7G5/3+xuf9/brX/f261/39utf9/E7H/fxOx/38Tsf9/laz/f5Ws/3+VrEDZvwP/f+inUdn0A2nkIRvN4j4VvOZ4E8Pn4heu5jkTmusmFKTrWhT46s0Q0e/TDRfwww8c8OIPze+3DXX1egp29YgKYfWWCQ/8zwMQ/OwDD/zNA/9/F8L/fxfC/38Xwv9/F8L/f0zG/39Mxv9/TMb/f4/K/3+Pyv9/j8r/f4/K/3/rzv9/687/f+vO/39p0/9/adP/f2nTcoJl1iSA/Nf/fxXYLq5wuyzAXq4Yv8uxm7DpvPe/H7Fusxa+u7KnvkrAqLPNvxi3nrb6vhS2cL9bwJ62KLqTv9C54r89wAm68r8Evv696L8QwOe9/7//v4wquSpCKt4qqiqqKqoqqiqqKqoq1yqUKpwxMSceT3AYXC7RKHsswinRKpcqtSqkKqoqqiqrKqoqqiqqKv9//7//f/+//3//v/9//7//////VNVU1VTVVNVU1VTVVNVU1VTVVNU11WTVVNVU1VTVVNXN0RfXVNVU1XHVRtVU1VTVVNVU1VTVVNVU1VTV")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_feixj")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sqhpi"]

[sub_resource type="ArrayMesh" id="ArrayMesh_cqan0"]
_surfaces = [{
"aabb": AABB(-0.459282, -2.2789, 0.111649, 0.918563, 1.40365, 0.76693),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_3fsfv"]
resource_name = "Character_Cube_003"
_surfaces = [{
"aabb": AABB(-0.459282, -2.2789, 0.111649, 0.918563, 1.40365, 0.76693),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_sqhpi"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_cqan0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p1sl2"]

[sub_resource type="ArrayMesh" id="ArrayMesh_xcuyh"]
_surfaces = [{
"aabb": AABB(-0.459282, -2.2789, -0.91756, 0.918563, 1.40365, 0.76693),
"format": 34896613377,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAACAAEAAwAEAAEABQAAAAIAAwAAAAUABAAGAAIABQACAAYAAwAHAAQAAwAFAAcABwAGAAQABwAFAAYA"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 8,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP//AAAAAAAA/////wAAAAAAAAAAAAD/////AAAAAP//AAD//wAA////////AAD//wAAAAAAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_unftq"]
resource_name = "Character_Cube_002"
_surfaces = [{
"aabb": AABB(-0.459282, -2.2789, -0.91756, 0.918563, 1.40365, 0.76693),
"attribute_data": PackedByteArray("/1////+f/7//n////1//v/9f/7//n/9//5//v/9f/3//X/9//5//P/+f/3//X/8//1//P/+fAAD/n/8//18AAP8f/3//X/8//1//f/8f/z//n/9//9//P//f/3//n/8/"),
"format": 34896613399,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_p1sl2"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AAAAAP//VNUAAP//AABU1QAA/////1TVAAAAAAAAVNUAAAAAAAD///////8AAP//AAD//wAA/////wAAAAD/////AAAAAFTV////////VNX/////AABU1f//AAD//1TV//8AAP///78AAP//////v/////////+/AAAAAP///78AAAAAAAD/v///AAD///+///8AAAAA/78AAAAA////v/////8AAP//AAD///////8AAP//AAD/////////////VNVU1VTVVNVU1VTVVNVU1f+//7//v/+//7//v/+//7+qKqoqqiqqKqoqqiqqKqoq/////////////////////wAA/38AAP9/AAD/fwAA/3//f/+//3//v/9//7//f/+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_xcuyh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4r25y"]

[sub_resource type="ArrayMesh" id="ArrayMesh_cpkly"]
_surfaces = [{
"aabb": AABB(-0.411895, 1.06371, -0.559566, 0.823789, 1.11913, 1.11913),
"format": 34896613377,
"index_count": 468,
"index_data": PackedByteArray("AAAMAAIAAAAiAAwAIwACAAwAIgAjAAwAJAAAAAIAJAAiAAAAJAACACUAAgAmACUAIwAmAAIADQAkACUADQAlACYAJwAkAA0AJwANACYAJwAmACEAIAAnACEAJgAoACEAIAAhACgAKQAnACAAKQAgACgAKQAkACcAJgAqACgAIwAqACYAKQAoABEAKAAqABEACAApABEACAARACoAKwApAAgAKwAIACoALAApACsALAAkACkAKwAqAB8ALQArAB8ALAArAC0ALQAfAC4AKgAuAB8ALAAtAC4AKgAJAC4ALAAuABIALgAJABIAHQAsABIAHQASAAkALwAsAB0ALwAdAAkALwAJADAAHgAvADAAKgAxAAkACQAyADAAHgAwADIACQAxADIAMwAvAB4AMwAsAC8AMwAeADIAIwAxACoAMwAyABAAMgAxABAAAwAzABAAAwAQADEANAAzAAMANAADADEANQAsADMANQAzADQANQA0ADYANgA0ABkANAAxABkANgAZADcANQA2ADcAMQA3ABkANQA3ABwAMQA4ADcANwA4ABwAGwA1ABwAGwAcADgAOQA1ABsAOQAbADgAOQA4AAsAOgA5AAsAOAAFAAsAOgALAAUAOwA5ADoAOwA1ADkAOwA6AAUAOAA8AAUAMQA8ADgAOwAFAD0ABQA8AD0ADgA7AD0ADgA9ADwAPgA1ADsAPgAsADUAPwA7AA4APgA7AD8APwAOADwAPgAkACwAPwA8ABoAQAA/ABoAPgA/AEAAQAAaAEEAPABBABoAPgBAAEEAMQAPADwAPABCAEEAPAAPAEIAQQBCAAoAPgBBAAoAFwAKAEIAFwA+AAoAQwAXAEIAQwA+ABcAQwBCAAEARABDAAEAQgBFAAEARAABAEUAQgAPAEUARgBDAEQARgA+AEMARgBEAEUARQAPABgARgBFABgABABGABgABAAYAA8ARwA+AEYASABGAAQARwBGAEgASAAEAA8AJAA+AEcARwBIAEkASQBIAAYASAAPAAYASQAGAEoADwBKAAYARwBJAEoADwBLAEoARwBKABYASgBLABYAFQBHABYAFQAWAEsAJABHAEwATQBHABUATABHAE0ATQAVAEsAJABMACIATQBLAAcATgBNAAcATABNAE4ATgAHAE8ATABOAE8ASwBPAAcAIgBMABMATABPABQAEwBMABQAIgATACMAEwAUACMATwAjABQASwAjAE8ADwAjAEsAMQAjAA8A"),
"lods": [0.0220612, PackedByteArray("AAAMAAIADQAAAAIAAAATAAwADQATAAAAEwAUAAwAEwAHABQABwAMABQAEwAVAAcADQAVABMAFQAWAAcAFQAGABYADwAHABYADwAWAAYADwAMAAcAFQAEAAYABAAPAAYAFQAXAAQADQAXABUABAAYAA8ABAABABgAAQAPABgABAAXAAEAGQAMAA8AGgAPAAEAGQAPABoAFwAKAAEAGgABAAoAFwAaAAoAFwAOABoADgAFABoACwAaAAUADgALAAUAGQAaAAsAFwAbAA4ADgAbAAsAGQALABwAGwAcAAsAGwAZABwAFwAdABsAFwANAB0AGwADABkAAwAQABkAGwAeAAMAAwAeABAAGwAdAB4AHgAJABAACQAZABAAHgAdAAkAHwAZAAkADAAZAB8AHQASAAkAHwAJABIAHQAfABIAHQAIAB8ACAARAB8AHQAgAAgACAAgABEAHQANACAAIQAfABEADAAfACEAIAAhABEAIAANACEADAAhAAIADQACACEA"), 0.0832844, PackedByteArray("AAAMAAIADQAAAAIADQAEAAAACAANAAIADQAOAAQADgANAAgAAAAEAAcAAAAHAAwABAAGAAcADwAHAAYABAAPAAYADwAMAAcABAAKAA8ABAAOAAoAEAAMAA8AEAAPAAoADAARAAIADAAQABEACAACABEADgAFAAoACAARABIACwAKAAUADgALAAUAEAAKAAsADgADAAsAAwAQAAsADgAIAAMAEQAQAAkAEQAJABIAAwAJABAACAASAAkAAwAIAAkA"), 0.278545, PackedByteArray("AAAHAAIAAAAEAAcABgACAAcABAAGAAcACAAAAAIACAAEAAAACQACAAYACAACAAkABAAKAAYACQAGAAoABAAIAAMAAwAIAAkABAADAAsAAwAJAAsABAALAAoACQAKAAsA"), 0.532705, PackedByteArray("AAAEAAIAAwAEAAAAAwAAAAIABAADAAUAAwACAAUABAAGAAIAAgAGAAUABAAFAAYA"), 0.671733, PackedByteArray("AAABAAIAAwACAAEAAwAAAAIAAAADAAEA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("AAD/fwAAAAD///MNG7oAAP///38AAAAAAACM5zvLAAAAAAAA/38AAP///3///wAA//+TAflrAAD//30lfSUAAAAAjOfDNAAA/v////9/AAD//30lgdoAAP//BZRr/gAA///5a5MBAAAAAI2nQwYAAAAAcVi7+QAA//8AAP9/AAD+/wvyG7oAAP7/gdp9JQAA/v9r/vlrAAAAAHFYQwYAAP//40XzDQAAAAByGMM0AAD///MN40UAAAAAchg7ywAA//+TAQWUAAD+/4HagdoAAP//40UL8gAAAACNp7v5AAD+/xu6C/IAAAAA/v//fwAAAAC7+Y2nAAD+/wvy40UAAAAAO8tyGAAA/v8buvMNAAAAAPlrkwEAAP//cVhDBgAAAAAFlJMBAAD//wWUkwEAAP//jadDBgAAAAAbuvMNAAD+/zvLchgAAAAAgdp9JQAA/v+M58M0AAAAAAvy40UAAAAAa/75awAAAAC7+XFYAAD+/7v5cVgAAAAAa/4FlAAA/v9r/gWUAAD+/4znO8sAAP7/u/mNpwAAAAAL8hu6AAAAAIHagdoAAAAAG7oL8gAAAAA7y4znAAD+/zvLjOcAAP//jae7+QAAAAAFlGv+AAAAAP9///8AAAAA+Wtr/gAA//9xWLv5AAD///lra/4AAAAAfSWB2gAAAADjRQvyAAAAAMM0jOcAAP//wzSM5wAA//9yGDvLAAAAAPMNG7oAAAAAQwaNpwAA//9DBo2nAAAAAJMBBZQAAAAA8w3jRQAAAACTAflrAAAAAEMGcVgAAP//QwZxWAAA//9yGMM0AAAAAONF8w0AAAAAfSV9JQAAAADDNHIYAAD//8M0chgAAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_wt1qo"]
resource_name = "Character_Cylinder"
_surfaces = [{
"aabb": AABB(-0.411895, 1.06371, -0.559566, 0.823789, 1.11913, 1.11913),
"attribute_data": PackedByteArray("////f8ysAAD//wAAmVn/fwAAAAAAAP9//7//f2XGAAD/fwAA/z+Ogq58Yrb/P2/9So4c5G/9/7//v46C/98AAP+fAACZeQAA/z8AAGYm/3+PAv+/cWtw62M2rvxxa42USo7im5j5AAD/vwAAzIz/fzJTAACZOQAA/x8AAMwM/3+OFI2UUANitkEJ49ucSVCDcH3/vwKtkIX70m36MvP/f8vsAACY2f9/MtMAAJi5AABlpv9/MpMAADJz/3/MbAAA/18AAMxM/3//P/9/zCwAAJkZ/38zEwAAvXYapORbQYkbJEGJvXbj2658m8lBCRqkjhRw6+RbvfYbJL32+9KQhbPx4puz8RzkjoL/v+KbSo4CrW36kIX70pj5/3+Y+f9/MvMAAJj5AAAy8/9/MvMAAMvs/3/L7P9/ZeYAAMvsAABl5v9/Zeb/f2XmAAD/3/9//9//f5jZAAD/3wAAmNn/f5jZAAAy0/9/MtP/f8zMAAAy0wAAzMz/f8zM/3/MzAAAZcb/f2XG/3//vwAAZcYAAP+//3+YuQAAmLn/f5i5/38yswAAMrP/fzKz/3/MrAAAMrMAAMys/3/MrP9/ZaYAAGWm/3//nwAAZaYAAP+f/3//n/9/mZkAAJmZ/3+Zmf9/MpMAAJmZAAAyk/9/MpP/f8yMAADMjP9/ZYYAAMyMAABlhv9/ZYb/f/9/AABlhgAA/3//f/9//3+Zef9/mXn/fzJzAACZeQAAMnP/fzJzAADMbP9/zGz/f2ZmAADMbAAAZmb/f2Zm/39mZgAA/1//f/9f/3+ZWQAA/18AAJlZ/3+ZWQAAMlP/fzJT/3/MTAAAMlMAAMxM/39mRgAAzEwAAGZG/39mRv9/ZkYAAP8//3+ZOQAA/z8AAJk5/3+ZOf9/MzMAADMz/38zM/9/zCwAADMzAADMLP9/zCz/f2YmAABmJv9//x8AAGYmAAD/H/9//x//f5kZAACZGf9/MxMAAJkZAAAzE/9/MxP/f8wMAADMDP9//FKQhQMtkIVjNlCD4htKjksO4puRBQKtSw4c5JEF+9JQA5vJHGRKjrRx4ptuegKtbnr70rRxHOT8Um36HGSz8eIbs/EDLW36nEmu/GYGAADMDAAAZgb/f2YG/39mBgAAYrZQg5vJUIPj20GJcOuNlBzkSo699hqkrvxitm36Aq2u/JvJcOtw673249tt+vvSGqRBiY2UjZRQg2K2QYkapJCFAq1Qg5vJQYnj2xqkvfaNlHDr4puz8ePbvfYc5LPxm8mu/GK2rvz/v2/9"),
"format": 34896613399,
"index_count": 468,
"index_data": PackedByteArray("AAAZAAIAAABGABkARwBIAEkARwAnAEgASgAoAEsASgBMACgATQBOAE8ATQBQAE4AUQAPAFIAUQBTAA8AVABVAFYAVAApAFUAVwAqAFgAVwBZACoAWgBbAFwAWgBdAFsAXgAHAF8AXgBgAAcAYQBiAGMAYQBkAGIABgBlABoABgBmAGUAZwBoACsAZwBpAGgAagBrAGwAagBtAGsAbgBvAAEAbgBwAG8ALABxAHIALABzAHEAdAB1ABAAdAB2AHUAdwB4AHkAdwB6AHgAewB8AC0AewB9AHwAGwB+AH8AGwCAAH4AgQCCAIMAgQCEAIIAhQARAAgAhQCGABEAhwCIAIkAhwAuAIgAigAvAIsAigCMAC8AjQCOAI8AjQCQAI4AkQAwAJIAkQCTADAAlACVAJYAlAADAJUAlwAcAJgAlwCZABwAmgCbAJwAmgAxAJsAnQCeAJ8AnQCgAJ4AoQASAKIAoQAyABIAowCkAKUAowCmAKQApwCoAB0ApwCpAKgAqgCrAKwAqgCtAKsArgCvADMArgCwAK8AEwCxALIAEwCzALEAtAC1AB4AtAC2ALUANAC3ALgANAC5ALcAugC7ADUAugC8ALsAvQAJACMACQC+AL8AvQC+AAkAvgDAADgAvgDBAMAAwADBACAAvQDBAL4AwQDCADsAwQAUAMIAwgAUACEAwQDDABQAvQDDAMEAFADEAMUAFADDAMQAxADDACIAxgC9ADcAxwC9AMYAxwDGABcAJAC9AMcAwwC9ACQAyADHADYAJADHAMgAJADIAAoAyQAkADoAygAkAMkAygDJADkAwwAkAMsAywAkAMoAzADKABUAywDKAMwAywDMAD0AwwDNADwAwwDOAM0AwwDLAM4AzQDOAD4AzgDLAAsACwDLAM8AzgALABYAHwDQANEAHwDSANAA0wAEANQA0wAFAAQA1QDWAA4A1gDXAD8A1QDXANYA1wDYANkA1wDaANgA2ADaAEAA1QDaANcA2gDbANwA2gDdANsA2wDdAA0A2gDeAN0A1QDeANoA3QDfAOAA3QDeAN8A3wDeAEEA4QDVACUA4gDVAOEA4gDhAEMA4wDVAOIA3gDVAOMA5ADiABgA4wDiAOQA4wDkAOUA5gDjAEIA5wDjAOYA5wDmAEUA3gDjAOgA6ADjAOcA6QDnAAwA6ADnAOkA6ADpAOoA3gDrAOwA3gDtAOsA3gDoAO0A6wDtACYA7QDoAO4A7gDoAEQA7QDuAO8A"),
"lods": [0.0220612, PackedByteArray("AAAZAAIAAAAnABkAJwAoABkAJwAPACgAJwApAA8AKQAqAA8AKQAHACoAKQAGAAcABgAaAAcABgArABoABgABACsABgAsAAEALAAQAAEALAAtABAALAAbAC0AGwAIAC0AGwARAAgAGwAuABEALgAvABEALgAwAC8ALgADADAAAwAcADAAAwAxABwAMQASABwAMQAyABIAMgAdABIAMgAzAB0AMgATADMAEwAeADMAEwA0AB4ANAA1AB4ANAAfADUAHwAEADUAHwAFAAQAJAA2AAoAJAAXADYAFwAjADcAJAAjABcAIwA4AAkAOQAkADoAIwA7ADgAOAA7ACAAPAAjACQAIwA8ADsAPQAkADkAPQA5ABUAPAAkAD0AOwA8ABQAOwAUACEAFAA8ACIAPAA9ABYAFgA9AAsAPAAWAD4AJQA/AA4AJQBAAD8AJQBBAEAAQABBAA0AQQAlAEIAQgAlAEMAQgBDABgAQQBCAEQAQQBEACYARABCAEUARABFAAwA"), 0.0832844, PackedByteArray("AAAZAAIAAAAPABkAAAAGAA8ABgAHAA8ABgAaAAcABgAQABoABgAbABAAGwAIABAAGwARAAgAGwADABEAAwAcABEAAwASABwAAwATABIAEwAdABIAEwAeAB0AEwAEAB4AEwAfAAQAHwAFAAQAIAAUACEAIAAiABQAIwAiACAAIwAgAAkAIgAjACQAJAAjABcAJAAXAAoAIgAkABUAIgAVABYAFgAVAAsAJQANAA4AJQAmAA0AJgAlABgAJgAYAAwA"), 0.278545, PackedByteArray("AAAPAAIAAAAGAA8ABgAHAA8ABgAQAAcABgARABAABgADABEAAwASABEAAwATABIAEwAEABIAEwAFAAQAFAAVABYAFAAKABUAFAAJAAoACgAJABcAGAANAA4ADQAYAAwA"), 0.532705, PackedByteArray("AAAGAAIABgAHAAIABgAIAAcABgADAAgAAwAEAAgAAwAFAAQACQAKAAsADAANAA4A"), 0.671733, PackedByteArray("AAABAAIAAAADAAEAAwAEAAEAAwAFAAQA")],
"material": SubResource("StandardMaterial3D_4r25y"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 240,
"vertex_data": PackedByteArray("AAD/fwAAu/3///MNG7rRyf///38AALv9AACM5zvLLcf///9/AAC7/QAA/38AALv9AAAAAP9/gdP//5MB+WsS2////3///w/A////fwAAVNX//5MB+WtU1f///3///1TVAACM5zvLqioAAAAA/3+qKgAA/38AAKoq//99JX0l2ev//30lgdrjxP//BZRr/g/A/v////9/gdMAAIznwzSB5/7/////f1TV//99JYHaVNX//wWUa/5U1f//fSV9JVTVAACM58M0qir///lrkwG7/f//AAD/f4HTAABxWLv5j8D+/wvyG7rRyf7/a/75axLb/v+B2n0l2esAAI2nQwY3+f7/gdp9JVTV/v9r/vlrVNX+/wvyG7pU1f//+WuTAVTV//8AAP9/VNUAAI2nQwaqKgAAcVi7+aoqAABxWEMGN/n//+NF8w249AAAchjDNIHn///zDeNFQOP//5MBBZQG0AAAchg7yy3H///jRQvyjMEAAI2nu/mPwP7/G7oL8ozB/v+B2oHa48QAALv5jafIzAAA/v//f4HT/v8L8uNFQOMAADvLchhB8P7/G7rzDbj0///zDeNFVNX//+NF8w1U1f7/G7rzDVTV///zDRu6VNX//5MBBZRU1f7/C/LjRVTV/v+B2oHaVNX//+NFC/JU1f7/G7oL8lTVAABxWEMGqioAAHIYwzSqKgAAchg7y6oqAAD+//9/qioAADvLchiqKgAAjae7+aoqAAC7+Y2nqioAAPlrkwG7/QAA+WuTATf5//9xWEMGN/n///lrkwE3+QAAcVhDBrj0//9xWEMGuPQAAONF8w249AAA40XzDUHw///DNHIYQfD//+NF8w1B8AAAwzRyGEHwAADDNHIY2ev//8M0chjZ6wAAfSV9JdnrAAB9JX0lgef//3IYwzSB5///fSV9JYHnAAByGMM0QOP//3IYwzRA4wAA8w3jRUDjAADzDeNFGd///0MGcVgZ3///8w3jRRnfAABDBnFYGd8AAEMGcVgS2///QwZxWBLbAACTAflrEtsAAJMB+Wsz1///AAD/fzPX//+TAflrM9cAAAAA/38z1///kwEFlIHTAACTAQWUgdMAAJMBBZQG0P//QwaNpwbQAABDBo2nBtAAAEMGjafIzP//8w0busjM//9DBo2nyMwAAPMNG7rIzAAA8w0butHJ//9yGDvL0ckAAHIYO8vRyf//fSWB2i3H//9yGDvLLccAAH0lgdotxwAAfSWB2uPE///DNIzn48QAAMM0jOfjxAAAwzSM5wDD///jRQvyAMP//8M0jOcAwwAA40UL8gDDAADjRQvyjMH//3FYu/mMwQAAcVi7+YzB///5a2v+j8D//3FYu/mPwAAA+Wtr/o/AAAD5a2v+D8D///9///8PwP//+Wtr/g/AAAD/f///D8AAAP9///8PwAAABZRr/g/AAAAFlGv+j8D//42nu/mPwP//BZRr/o/AAACNp7v5jMH//42nu/mMwQAAG7oL8ozBAAAbugvyAMP+/zvLjOcAw/7/G7oL8gDDAAA7y4znAMMAADvLjOfjxP7/O8uM5+PEAACB2oHa48QAAIHagdotx/7/jOc7yy3H/v+B2oHaLccAAIznO8vRyf7/jOc7y9HJAAAL8hu60ckAAAvyG7rIzP7/u/mNp8jM/v8L8hu6yMwAALv5jacG0P7/a/4FlAbQ/v+7+Y2nBtAAAGv+BZQG0AAAa/4FlIHT/v9r/gWUgdMAAP7//38z1/7/a/75azPX/v////9/M9cAAGv++Wsz1wAAa/75axLb/v+7+XFYEtsAALv5cVgS2wAAu/lxWBnf/v8L8uNFGd/+/7v5cVgZ3wAAC/LjRRnfAAAL8uNFQOP+/4znwzRA4wAAjOfDNEDj/v+B2n0lgef+/4znwzSB5wAAgdp9JYHnAACB2n0l2ev+/zvLchjZ6wAAO8tyGNnr/v8buvMNQfD+/zvLchhB8AAAG7rzDUHwAAAbuvMNuPT//42nQwa49AAAjadDBrj0//9xWEMGVNX//42nQwZU1f//BZSTAVTV/v87y3IYVNX+/4znwzRU1f7/u/lxWFTV/v+M5zvLVNX+/7v5jadU1f7/a/4FlFTV///DNHIYVNX//3IYwzRU1f//QwZxWFTV//9DBo2nVNX//3IYO8tU1f//cVi7+VTV///DNIznVNX+/zvLjOdU1f//jae7+VTV///5a2v+VNX//wWUkwE3+f//jadDBjf5AAAFlJMBN/kAAAWUkwG7/f//BZSTAbv9AAAFlJMBqioAAPlrkwGqKgAA40XzDaoqAAB9JX0lqioAAMM0chiqKgAA8w3jRaoqAACTAflrqioAAEMGcViqKgAAkwEFlKoqAAB9JYHaqioAAPMNG7qqKgAAQwaNp6oqAAAbuvMNqioAAIHafSWqKgAAa/75a6oqAAAL8uNFqioAALv5cViqKgAAa/4FlKoqAAAL8hu6qioAABu6C/KqKgAAgdqB2qoqAAA7y4znqioAAONFC/KqKgAAwzSM56oqAAD5a2v+qioAAAWUa/6qKgAA/3///6oqO0E7QS9eL147QTtBs56znsO+w77DvsO+d1Z3VhhSGFKphKmEqqpUVamqVFWqqlRVVFWpqlRVqqpUVaqq90n3SdNk02SphKmEh6mHqQK0ArSqqlRVqqpVVamqVFWpqlRVVVWqqjtBO0F3VndWwHPAc8+hz6HmreatB7YHtmy8bLyqqlVVqqpVVaqqVVWpqlRVqqpUVVVVqqpVVaqqkkOSQ8lFyUX8S/xL/03/TdZY1lhLYUthyG3IbT6MPow2kjaSK5srm5qkmqSHqYep/7H/sRa4Frg1ujW6qqpVVaqqVVWpqlRVqapUVaqqVVWpqlRVqapUVamqVFWqqlVVVFWpqlRVqapVVaqqVFWqqlRVqapUVamqVVWqqjtBO0GSQ5JDkkOSQ5JDkkPJRclFyUXJRclFyUXoR+hH6EfoR+hH6EfoR+hH90n3SfdJ90n3SfdJ/Ev8S/xL/Ev8S/xL/03/Tf9N/03/Tf9NBlAGUAZQBlAGUAZQBlAGUBhSGFIYUhhSGFIYUjpUOlQ6VDpUOlQ6VDpUOlR3VndWd1Z3VtZY1ljWWNZY1ljWWGRbZFtkW2RbZFtkW2RbZFsvXi9eL14vXi9eL15LYUthS2FLYUthS2HTZNNk02TTZNNk02TqaOpo6mjqaOpo6mjqaOpoyG3IbchtyG3IbchtwHPAc8BzwHPAc8BzVXtVe1V7VXtVe1V7VXtVe6mEqYSphKmEPow+jD6MPow+jD6MNpI2kjaSNpI2kjaSFJcUlxSXFJcUlxSXFJcUlyubK5srmyubK5srm7Oes56znrOes56zns+hz6HPoc+hz6HPoZqkmqSapJqkmqSapCinKKcopyinKKcopyinKKeHqYeph6mHqcSrxKvEq8SrxKvEq8SrxKvmreat5q3mreat5q34r/iv+K/4r/iv+K/4r/iv/7H/sf+x/7H/sf+xArQCtAK0ArQCtAK0B7YHtge2B7YHtge2FrgWuBa4FrgWuBa4Nbo1ujW6Nbo1ujW6qqpUVaqqVFWqqlVVqapUVamqVFWpqlRVqqpVVaqqVVWpqlRVqqpVVaqqVVWqqlVVqapUVamqVFWqqlRVqapUVaqqVVWqqlRVqqpVVWy8bLxsvGy8bLxsvMO+w77DvsO+VFWqqlRVqqpVVaqqVFWpqlVVqqpUVamqVFWpqlVVqqpUVamqVFWpqlRVqapUVamqVFWpqlRVqapUVamqVFWpqlRVqapUVamqVVWqqlRVqqpUVamqVVWqqlRVqapUVamqVFWqqlRVqqpUVaqq")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_cpkly")

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ooc87"]
_data = {
&"Walking": ExtResource("2_frpx3")
}

[node name="Grimblo" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_frpx3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("CapsuleShape3D_dwyiq")

[node name="Character" type="Node3D" parent="."]
transform = Transform3D(-8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, 0, 0, 0)

[node name="Player" type="Node3D" parent="Character"]

[node name="Cube" type="MeshInstance3D" parent="Character/Player"]
material_override = ExtResource("2_hv2v0")
mesh = SubResource("ArrayMesh_y2wu8")
skeleton = NodePath("")

[node name="Cube_001" type="MeshInstance3D" parent="Character/Player"]
material_override = ExtResource("2_hv2v0")
mesh = SubResource("ArrayMesh_3fsfv")
skeleton = NodePath("")

[node name="Cube_002" type="MeshInstance3D" parent="Character/Player"]
material_override = ExtResource("2_hv2v0")
mesh = SubResource("ArrayMesh_unftq")
skeleton = NodePath("")

[node name="Cylinder" type="MeshInstance3D" parent="Character/Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118683, 0)
material_override = ExtResource("2_hv2v0")
mesh = SubResource("ArrayMesh_wt1qo")
skeleton = NodePath("")

[node name="Pointer" parent="Character/Player" instance=ExtResource("4_k2h1b")]
transform = Transform3D(1.5, 0, 5.32907e-15, 0, 1.5, 0, -5.32907e-15, 0, 1.5, 2.54, 0, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character"]
libraries = {
&"": SubResource("AnimationLibrary_ooc87")
}
autoplay = "Walking"
speed_scale = 2.0

[node name="LabelPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)

[node name="Label3D" type="Label3D" parent="LabelPivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
visible = false
text = "Hello!!"
